@@ -67,10 +67,11 @@ setClass <-
         classDef@sealed <- FALSE # to allow setIs to work anyway; will be reset later
         assignClassDef(Class, classDef, where)
         badContains <- character()
-### FIXME: need to iterate over contains, not superclass to get
-### package for getClassDef()
-        for(class2 in superClasses) {
-            if(is(try(setIs(Class, class2, classDef = classDef, where = where)), "try-error"))
+        for(ext in classDef@contains) {
+            class2 <- ext@superClass
+            if(is(try(setIs(Class, class2, classDef = classDef, where = where,
+                            extensionObject = ext)),
+                  "try-error"))
                 badContains <- c(badContains, class2)
             else { # update class definition
                 classDef <- getClassDef(Class, where = where)
@@ -205,8 +206,9 @@ makeClassRepresentation <-
         what <- whatClassDef@className # includes package name as attribute
         ## Create the SClassExtension objects (will be simple, possibly dataPart).
         ## The slots are supplied explicitly, since `name' is currently an undefined class
-        contains[[what]] <- makeExtends(name, what, slots = slots,
-                                              classDef2 = whatClassDef, package = package)
+        contains[[what]] <- makeExtends(name, slots = slots,
+                                        classDef2 = whatClassDef,
+                                        package = package)
     }
     validity <- .makeValidityMethod(name, validity)
     if(is.na(virtual)) {
